CSS fix for dark mode on iTunes Artwork Finder

--- a/styles-2022-05-31.css
+++ b/styles-2022-05-31.css
@@ -853,6 +853,10 @@ span.prelude {
 	#thanks {
 		background: #222;
 	}
+
+	#appletvprompt {
+		background: #222;
+	}
 }
 
 article div.gofigure {
